--- a/Movie_Page/index.html
+++ b/Movie_Page/index.html
@@ -36,7 +36,7 @@
     <!-- INÍCIO DE HEADER -->
     <header id="header">
         <div class="container_header_mobile">
-            <a href="../Home_Page/index.html">
+            <a href="#">
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
             <div class="menu">
@@ -81,7 +81,7 @@
         </div>
 
         <div class="container_header">
-            <a href="../Home_Page/index.html">
+            <a href="#">
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
             <nav class="nav_desktop">
