--- a/Login_Page/index.html
+++ b/Login_Page/index.html
@@ -21,7 +21,7 @@
 
         <div class="container_carousel">
             <div class="logo">
-                <a href="../Landing_Page/index.html" rel="prev" title="Voltar para o início">
+                <a href="../index.html" rel="prev" title="Voltar para o início">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
                 <a href="../Singup_page/index.html"><span class="btn_media">Sing Up</span></a>
@@ -46,7 +46,7 @@
         <div class="container_form">
             <div class="blur prim"></div>
             <div class="logo_mobile">
-                <a href="https://dafnyalmeida.github.io/Phikine/" rel="prev" title="Voltar para o início">
+                <a href="../index.html" rel="prev" title="Voltar para o início">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
                 <span class="btn_media">Sing Up</span>
