--- a/Singup_page/index.html
+++ b/Singup_page/index.html
@@ -24,7 +24,7 @@
         <div class="container_form">
             <div class="blur prim"></div>
             <div class="logo_mobile">
-                <a href="../Landing_Page/index.html" rel="link">
+                <a href="../index.html" aria-label="Página inicial">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
                 <a href="../Login_Page/index.html"><span class="span_logo">Log In</span></a>
@@ -70,7 +70,7 @@
 
         <div class="container_carousel">
             <div class="logo">
-                <a href="../Landing_Page/index.html" rel="link">
+                <a href="../index.html" aria-label="Ir para página inicial">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
                 <a href="../Login_Page/index.html"><span class="span_logo">Log In</span></a>
