--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- IMPOTAÇÃO DOS CSS -->
-    <link rel="stylesheet" href="assets/styles/landing_style.css">
+    <link rel="stylesheet" href="Landing_Page/assets/styles/landing_style.css">
 
     <!-- IMPOTAÇÃO DO FAVICON -->
     <link rel="icon" type="image/svg+xml" href="assets/imagens/icons/icon.svg">
@@ -72,65 +72,62 @@
             <div id="carousel">
                 <div class="carousel_track">
                     <div class="carousel_group">
-
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Stanger_Things_700x350.jpg" alt="Cena de Stanger Things"
+                            <img src="Landing_Page/assets/imagens/Stanger_Things_700x350.jpg" alt="Cena de Stanger Things"
                                 class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/A_Lista_de_Schindler.jpg" alt="A Lista de Schindler"
+                            <img src="Landing_Page/assets/imagens/A_Lista_de_Schindler.jpg" alt="A Lista de Schindler"
                                 class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Central_do_Brasil.jpg" alt="Central do Brasil"
+                            <img src="Landing_Page/assets/imagens/Central_do_Brasil.jpg" alt="Central do Brasil"
                                 class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Viva_la_vida.jpg" alt="Viva la vida"
+                            <img src="Landing_Page/assets/imagens/Viva_la_vida.jpg" alt="Viva la vida"
                                 class="item_carousel active_carro">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Cidade_de_Deus.jpg" alt="Cidade de Deus" class="item_carousel">
+                            <img src="Landing_Page/assets/imagens/Cidade_de_Deus.jpg" alt="Cidade de Deus" class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Jojo.jpg" alt="Jojo" class="item_carousel">
+                            <img src="Landing_Page/assets/imagens/Jojo.jpg" alt="Jojo" class="item_carousel">
                         </div>
                     </div>
 
-
                     <div class="carousel_group">
-
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Stanger_Things_700x350.jpg" alt="Cena de Stanger Things"
+                            <img src="Landing_Page/assets/imagens/Stanger_Things_700x350.jpg" alt="Cena de Stanger Things"
                                 class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/A_Lista_de_Schindler.jpg" alt="A Lista de Schindler"
+                            <img src="Landing_Page/assets/imagens/A_Lista_de_Schindler.jpg" alt="A Lista de Schindler"
                                 class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Central_do_Brasil.jpg" alt="Central do Brasil"
+                            <img src="Landing_Page/assets/imagens/Central_do_Brasil.jpg" alt="Central do Brasil"
                                 class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Viva_la_vida.jpg" alt="Viva la vida"
+                            <img src="Landing_Page/assets/imagens/Viva_la_vida.jpg" alt="Viva la vida"
                                 class="item_carousel active_carro">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Cidade_de_Deus.jpg" alt="Cidade de Deus" class="item_carousel">
+                            <img src="Landing_Page/assets/imagens/Cidade_de_Deus.jpg" alt="Cidade de Deus" class="item_carousel">
                         </div>
 
                         <div class="carrossel_item">
-                            <img src="assets/imagens/Jojo.jpg" alt="Jojo" class="item_carousel">
+                            <img src="Landing_Page/assets/imagens/Jojo.jpg" alt="Jojo" class="item_carousel">
                         </div>
                     </div>
 
@@ -144,7 +141,7 @@
             <div class="div_infos">
                 <div class="items_infos">
                     <h3 class="h3 h3_infos">
-                        1000 <img src="assets/imagens/icons/plus.svg" alt="Sinal de mais" class="icon_infos">
+                        1000 <img src="Landing_Page/assets/imagens/icons/plus.svg" alt="Sinal de mais" class="icon_infos">
                     </h3>
                     <p>Filmes e séries</p>
                 </div>
@@ -152,8 +149,7 @@
                     <p>Criado a partir da filosofia <br> <span class="span_infos">Mobile First</span></p>
                 </div>
                 <div class="items_infos">
-                    <p>Site <span class="span_infos">planejado</span> e <br> construido para <span
-                            class="span_infos">você</span></p>
+                    <p>Site <span class="span_infos">planejado</span> e <br> construido para <span class="span_infos">você</span></p>
                 </div>
             </div>
             <div class="blur quin"></div>
@@ -162,19 +158,21 @@
         <section id="previa">
             <div class="items_previa">
                 <h2 class="h2 animar">O PHIKINE</h2>
-                <p class="text_subtitle animar">Phikine é o espaço para quem ama cinema. <br> Aqui você encontra informações
+                <p class="text_subtitle animar">
+                    Phikine é o espaço para quem ama cinema. <br> Aqui você encontra informações
                     sobre seus filmes favoritos, marque o que já viu ou quer ver e viva o melhor do mundo do cinema —
-                    simples, prático e divertido.</p>
+                    simples, prático e divertido.
+                </p>
             </div>
             <div class="items_previa">
                 <ul class="list_previa animar">
                     <li>
-                        <a href="../indez/home.html" target="tela" class="link_previa">
+                        <a href="Home_Page/index.html" target="tela" class="link_previa">
                             Veja aqui os filmes
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="tela" class="link_previa" onclick="avisarProvisorio(); return false;">
+                        <a href="Movie_Page/index.html" target="tela" class="link_previa">
                             Produção
                         </a>
                     </li>
@@ -185,7 +183,7 @@
                     </li>
                 </ul>
                 <div class="items_previa div_iframe">
-                    <iframe id="tela" name="tela" src="https://www.cursoemvideo.com/curso/html5-css3-modulo1/"
+                    <iframe id="tela" name="tela" src="Home_Page/index.html"
                         frameborder="0" scolling="yes" title="Página">
                         Seu navegador não é combativel.
                     </iframe>
@@ -200,7 +198,7 @@
             <div class="container_serv">
                 <div class="items_serv">
                     <div class="div_icon">
-                        <img src="assets/imagens/icons/check.svg" alt="Lupa" class="icon_serv">
+                        <img src="Landing_Page/assets/imagens/icons/check.svg" alt="Check" class="icon_serv">
                     </div>
                     <h3 class="h3">Marcar como "Assistido" ou "Quero ver"</h3>
                     <p>
@@ -210,7 +208,7 @@
                 </div>
                 <div class="items_serv">
                     <div class="div_icon">
-                        <img src="assets/imagens/icons/design.svg" alt="Lupa" class="icon_serv">
+                        <img src="Landing_Page/assets/imagens/icons/design.svg" alt="Design" class="icon_serv">
                     </div>
                     <h3 class="h3">Visual moderno, elegante e criativo</h3>
                     <p>
@@ -220,7 +218,7 @@
                 </div>
                 <div class="items_serv">
                     <div class="div_icon">
-                        <img src="assets/imagens/icons/infos.svg" alt="Lupa" class="icon_serv">
+                        <img src="Landing_Page/assets/imagens/icons/infos.svg" alt="Informações" class="icon_serv">
                     </div>
                     <h3 class="h3">Saiba tudo sobre suas produções favoritas</h3>
                     <p>
@@ -230,7 +228,7 @@
                 </div>
                 <div class="items_serv">
                     <div class="div_icon">
-                        <img src="assets/imagens/icons/comenta.svg" alt="Lupa" class="icon_serv">
+                        <img src="Landing_Page/assets/imagens/icons/comenta.svg" alt="Comentario" class="icon_serv">
                     </div>
                     <h3 class="h3">Espaço para comentários pessoais</h3>
                     <p>
@@ -240,7 +238,7 @@
                 </div>
                 <div class="items_serv">
                     <div class="div_icon">
-                        <img src="assets/imagens/icons/responsi.svg" alt="Lupa" class="icon_serv">
+                        <img src="Landing_Page/assets/imagens/icons/responsi.svg" alt="Responsivo" class="icon_serv">
                     </div>
                     <h3 class="h3">Interface responsiva e intuitiva</h3>
                     <p>
@@ -250,7 +248,7 @@
                 </div>
                 <div class="items_serv">
                     <div class="div_icon">
-                        <img src="assets/imagens/icons/search.svg" alt="Lupa" class="icon_serv">
+                        <img src="Landing_Page/assets/imagens/icons/search.svg" alt="Lupa" class="icon_serv">
                     </div>
                     <h3 class="h3">Buscar filmes por gênero e nome</h3>
                     <p>
