--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="div_header" id="header">
 
-            <a href="../Login_Page/index.html" class="btn btn_mobile">
+            <a href="Login_Page/login.html" class="btn btn_mobile">
                 Fazer Login
             </a>
 
@@ -48,11 +48,11 @@
             </div>
 
             <div class="items">
-                <a href="../Login_Page/index.html" class="btn_login btn">
+                <a href="Login_Page/login.html" class="btn_login btn">
                     Começar agora
                     <i class="fa-solid fa-angle-right"></i>
                 </a>
-                <a href="../Singup_page/index.html" class="btn_create btn">
+                <a href="Singup_page/singup.html" class="btn_create btn">
                     Criar conta
                 </a>
             </div>
@@ -67,7 +67,7 @@
         <section id="inicio">
             <span class="span_inicio animar">SÓ NO PHIKINE</span>
             <h1 class="h1 animar">TUDO DE MELHOR NO <br> AUDIOVISUAL EM UM SÓ LUGAR</h1>
-            <a href="../Singup_page/index.html" class="btn btn_inicio animar">CRIAR UMA CONTA GRATUITA</a>
+            <a href="Singup_page/singup.html" class="btn btn_inicio animar">CRIAR UMA CONTA GRATUITA</a>
 
             <div id="carousel">
                 <div class="carousel_track">
@@ -167,12 +167,12 @@
             <div class="items_previa">
                 <ul class="list_previa animar">
                     <li>
-                        <a href="Home_Page/index.html" target="tela" class="link_previa">
+                        <a href="Home_Page/home.html" target="tela" class="link_previa">
                             Veja aqui os filmes
                         </a>
                     </li>
                     <li>
-                        <a href="Movie_Page/index.html" target="tela" class="link_previa">
+                        <a href="Movie_Page/movie.html" target="tela" class="link_previa">
                             Produção
                         </a>
                     </li>
@@ -183,7 +183,7 @@
                     </li>
                 </ul>
                 <div class="items_previa div_iframe">
-                    <iframe id="tela" name="tela" src="Home_Page/index.html"
+                    <iframe id="tela" name="tela" src="Home_Page/home.html"
                         frameborder="0" scolling="yes" title="Página">
                         Seu navegador não é combativel.
                     </iframe>
@@ -345,18 +345,6 @@
             }
         });
 
-    </script>
-
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <script>
-        ScrollReveal().reveal('.animar', {
-            origin: 'left',
-            distance: '30px',
-            duration: 2500,
-            opacity: 1,
-            reset: false
-        });
     </script>
 </body>
 </html>
