--- a/Login_Page/login.html
+++ b/Login_Page/login.html
@@ -24,7 +24,7 @@
                 <a href="../index.html" rel="prev" title="Voltar para o início">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
-                <a href="../Singup_page/index.html"><span class="btn_media">Sing Up</span></a>
+                <a href="../Singup_page/singup.html"><span class="btn_media">Sing Up</span></a>
             </div>
             <div class="slide active">
                 <video src="assets/videos/gumball.mp4" muted autoplay></video>
@@ -76,7 +76,7 @@
                         Continue com o Google
                     </button>
                     <button type="submit" class="entrar">Entrar</button>
-                    <a href="../Singup_page/index.html" class="aviso conta">Não tem uma conta? <span class="color">Criar</span></a>
+                    <a href="../Singup_page/singup.html" class="aviso conta">Não tem uma conta? <span class="color">Criar</span></a>
                 </div>
             </form>
         </div>
@@ -100,27 +100,16 @@
 
         const slides = document.querySelectorAll('.slide');
         let currentIndex = 0;
-        const interval = 15000; // tempo entre trocas (em ms)
+        const interval = 15000;
 
         function changeSlide() {
-            // remove a classe ativa do slide atual
             slides[currentIndex].classList.remove('active');
 
-            // avança o índice (ou volta para o início)
             currentIndex = (currentIndex + 1) % slides.length;
 
-            // adiciona a classe ativa ao próximo slide
             slides[currentIndex].classList.add('active');
-
-            // opcional: reiniciar o vídeo quando o slide ficar ativo
-            const video = slides[currentIndex].querySelector('video');
-            if (video) {
-                video.currentTime = 0;
-                video.play();
-            }
         }
 
-        // troca de slide a cada intervalo definido
         setInterval(changeSlide, interval);
     </script>
 </body>
