--- a/Home_Page/home.html
+++ b/Home_Page/home.html
@@ -195,7 +195,7 @@
                             <img src="assets/imagens/Home/main/lanca/A hora.png" alt="" class="img-lancamentos">
                         </div>
 
-                        <a href="../Movie_Page/index.html" aria-label="Link para ver Arcane">
+                        <a href="../Movie_Page/movie.html" aria-label="Link para ver Arcane">
                             <div class="img-container">
                                 <img src="assets/imagens/Home/main/lanca/Arcane.png" alt="" class="img-lancamentos">
                             </div>
