--- a/Login_Page/login.html
+++ b/Login_Page/login.html
@@ -76,7 +76,7 @@
                         Continue com o Google
                     </button>
                     <button type="submit" class="entrar">Entrar</button>
-                    <a href="../Singup_page/singup.html" class="aviso conta">Não tem uma conta? <span class="color">Criar</span></a>
+                    <a href="../Home_Page/home.html" class="aviso conta">Não tem uma conta? <span class="color">Criar</span></a>
                 </div>
             </form>
         </div>
