--- a/Singup_page/singup.html
+++ b/Singup_page/singup.html
@@ -59,7 +59,9 @@
 
                 <div class="btn">
                     <a href="../Home_Page/home.html" class="a_btn">
-                        <button type="submit" class="criar">Criar conta</button>
+                        <button type="submit" class="criar">
+                            <a href="../Home_Page/home.html">Criar conta</a>
+                        </button>
                     </a>
                     <a href="../Login_Page/login.html" class="aviso">Já tem uma conta? <span class="color">Logar</span></a>
                 </div>
