--- a/Login_Page/login.html
+++ b/Login_Page/login.html
@@ -75,8 +75,8 @@
                         </span>
                         Continue com o Google
                     </button>
-                    <button type="submit" class="entrar">Entrar</button>
-                    <a href="../Home_Page/home.html" class="aviso conta">Não tem uma conta? <span class="color">Criar</span></a>
+                    <button type="submit" class="entrar"><a href="../Home_Page/home.html">Entrar</a></button>
+                    <a href="../Singup_page/singup.html" class="aviso conta">Não tem uma conta? <span class="color">Criar</span></a>
                 </div>
             </form>
         </div>
